--- a/USF/app/src/main/AndroidManifest.xml
+++ b/USF/app/src/main/AndroidManifest.xml
@@ -5,13 +5,17 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="University Society Finder"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.USF">
         <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.USF.NoActionBar" />
+        <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name">
+            android:label="University Society Finder">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
