--- a/USF_v2/app/src/main/AndroidManifest.xml
+++ b/USF_v2/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/usf_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/usf_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.USF_v2">
+        <activity android:name=".mainMenu"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
