--- a/USF_v2/app/src/main/AndroidManifest.xml
+++ b/USF_v2/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/usf_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.USF_v2">
-        <activity android:name=".mainMenu"></activity>
+        <activity android:name=".TakeQuiz"></activity>
+        <activity android:name=".mainMenu" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
